crates/lexer/src/snapshots/lexer__tests__lex_all_simple.snap
---
source: crates/lexer/src/lib.rs
expression: lex(&all_tokens)
---
- ";=(){}+-*/:,@&<><=>===!=:=->structtest"
- Ok:
    - token: Semi
      span:
        range: 0..1
        str: ;
    - token: Assign
      span:
        range: 1..2
        str: "="
    - token: LParen
      span:
        range: 2..3
        str: (
    - token: RParen
      span:
        range: 3..4
        str: )
    - token: LBrace
      span:
        range: 4..5
        str: "{"
    - token: RBrace
      span:
        range: 5..6
        str: "}"
    - token: Plus
      span:
        range: 6..7
        str: +
    - token: Minus
      span:
        range: 7..8
        str: "-"
    - token: Asterisk
      span:
        range: 8..9
        str: "*"
    - token: Slash
      span:
        range: 9..10
        str: /
    - token: Colon
      span:
        range: 10..11
        str: ":"
    - token: Comma
      span:
        range: 11..12
        str: ","
    - token: At
      span:
        range: 12..13
        str: "@"
    - token: Ampersand
      span:
        range: 13..14
        str: "&"
    - token: Lt
      span:
        range: 14..15
        str: "<"
    - token: Gt
      span:
        range: 15..16
        str: ">"
    - token: Le
      span:
        range: 16..18
        str: "<="
    - token: Ge
      span:
        range: 18..20
        str: ">="
    - token: Eq
      span:
        range: 20..22
        str: "=="
    - token: Neq
      span:
        range: 22..24
        str: "!="
    - token: Walrus
      span:
        range: 24..26
        str: ":="
    - token: RArrow
      span:
        range: 26..28
        str: "->"
    - token: Struct
      span:
        range: 28..34
        str: struct
    - token: Test
      span:
        range: 34..38
        str: test
    - token: Eoi
      span:
        range: 38..38
        str: ""

