crates/lexer/src/snapshots/lexer__tests__lex_example.snap
---
source: crates/lexer/src/lib.rs
expression: "lex(include_str!(\"../../../tests/trivial\"))"
---
- "// immutable compile-time const\nval := { 4 };\n// or just:\n_val := 4;\n\n// function 'assignment'\nmain := () -> i32 {\n    print(\"Hello, world!\" + val);\n\treturn 0;\n};\n\n// automatic `return` without `;`\nmul_2 := (v: i32) -> i32 { v * 2 };\n\n// anonymous structs:\n_swap1 := (a: i32, b: i32) -> struct { a: i32, b: i32 } {\n\tstruct {\n\t\ta: b,\n\t\tb: a,\n\t}\n};\n// or tuples:\n_swap2 := (a: i32, b: i32) -> (i32, i32) {\n\t(b, a)\n};\n\n// references\n_swap3 := (a: &i32, b: &i32) {\n\tb, a = a, b;\n};\n\nextern := (i32) -> i32 @ __lang_test_extern;\n\n// generics, instanced lazily on first use\nsum := <T> (a: T, b: T) -> T {\n\ta + b\n};\n\n// unit tests\ntest \"unit test\" {\n\tassert(main() == 0);\n\tassert(mul_2(val) == 8);\n\n\ta, b := 4, 5;\n\t_swap3(&a, &b);\n\tassert((a, b) = (5, 4));\n\n\textern(42);\n\n\tassert(sum(\"tests\", \" worked\") == \"tests worked\");\n}\n"
- Ok:
    - token: LineComment
      span:
        range: 0..31
        str: // immutable compile-time const
    - token: Ident
      span:
        range: 32..35
        str: val
    - token: Walrus
      span:
        range: 36..38
        str: ":="
    - token: LBrace
      span:
        range: 39..40
        str: "{"
    - token: LitInt
      span:
        range: 41..42
        str: "4"
    - token: RBrace
      span:
        range: 43..44
        str: "}"
    - token: Semi
      span:
        range: 44..45
        str: ;
    - token: LineComment
      span:
        range: 46..57
        str: "// or just:"
    - token: Ident
      span:
        range: 58..62
        str: _val
    - token: Walrus
      span:
        range: 63..65
        str: ":="
    - token: LitInt
      span:
        range: 66..67
        str: "4"
    - token: Semi
      span:
        range: 67..68
        str: ;
    - token: LineComment
      span:
        range: 70..94
        str: "// function 'assignment'"
    - token: Ident
      span:
        range: 95..99
        str: main
    - token: Walrus
      span:
        range: 100..102
        str: ":="
    - token: LParen
      span:
        range: 103..104
        str: (
    - token: RParen
      span:
        range: 104..105
        str: )
    - token: RArrow
      span:
        range: 106..108
        str: "->"
    - token: Ident
      span:
        range: 109..112
        str: i32
    - token: LBrace
      span:
        range: 113..114
        str: "{"
    - token: Ident
      span:
        range: 119..124
        str: print
    - token: LParen
      span:
        range: 124..125
        str: (
    - token: LitStr
      span:
        range: 125..140
        str: "\"Hello, world!\""
    - token: Plus
      span:
        range: 141..142
        str: +
    - token: Ident
      span:
        range: 143..146
        str: val
    - token: RParen
      span:
        range: 146..147
        str: )
    - token: Semi
      span:
        range: 147..148
        str: ;
    - token: Return
      span:
        range: 150..156
        str: return
    - token: LitInt
      span:
        range: 157..158
        str: "0"
    - token: Semi
      span:
        range: 158..159
        str: ;
    - token: RBrace
      span:
        range: 160..161
        str: "}"
    - token: Semi
      span:
        range: 161..162
        str: ;
    - token: LineComment
      span:
        range: 164..197
        str: "// automatic `return` without `;`"
    - token: Ident
      span:
        range: 198..203
        str: mul_2
    - token: Walrus
      span:
        range: 204..206
        str: ":="
    - token: LParen
      span:
        range: 207..208
        str: (
    - token: Ident
      span:
        range: 208..209
        str: v
    - token: Colon
      span:
        range: 209..210
        str: ":"
    - token: Ident
      span:
        range: 211..214
        str: i32
    - token: RParen
      span:
        range: 214..215
        str: )
    - token: RArrow
      span:
        range: 216..218
        str: "->"
    - token: Ident
      span:
        range: 219..222
        str: i32
    - token: LBrace
      span:
        range: 223..224
        str: "{"
    - token: Ident
      span:
        range: 225..226
        str: v
    - token: Asterisk
      span:
        range: 227..228
        str: "*"
    - token: LitInt
      span:
        range: 229..230
        str: "2"
    - token: RBrace
      span:
        range: 231..232
        str: "}"
    - token: Semi
      span:
        range: 232..233
        str: ;
    - token: LineComment
      span:
        range: 235..256
        str: "// anonymous structs:"
    - token: Ident
      span:
        range: 257..263
        str: _swap1
    - token: Walrus
      span:
        range: 264..266
        str: ":="
    - token: LParen
      span:
        range: 267..268
        str: (
    - token: Ident
      span:
        range: 268..269
        str: a
    - token: Colon
      span:
        range: 269..270
        str: ":"
    - token: Ident
      span:
        range: 271..274
        str: i32
    - token: Comma
      span:
        range: 274..275
        str: ","
    - token: Ident
      span:
        range: 276..277
        str: b
    - token: Colon
      span:
        range: 277..278
        str: ":"
    - token: Ident
      span:
        range: 279..282
        str: i32
    - token: RParen
      span:
        range: 282..283
        str: )
    - token: RArrow
      span:
        range: 284..286
        str: "->"
    - token: Struct
      span:
        range: 287..293
        str: struct
    - token: LBrace
      span:
        range: 294..295
        str: "{"
    - token: Ident
      span:
        range: 296..297
        str: a
    - token: Colon
      span:
        range: 297..298
        str: ":"
    - token: Ident
      span:
        range: 299..302
        str: i32
    - token: Comma
      span:
        range: 302..303
        str: ","
    - token: Ident
      span:
        range: 304..305
        str: b
    - token: Colon
      span:
        range: 305..306
        str: ":"
    - token: Ident
      span:
        range: 307..310
        str: i32
    - token: RBrace
      span:
        range: 311..312
        str: "}"
    - token: LBrace
      span:
        range: 313..314
        str: "{"
    - token: Struct
      span:
        range: 316..322
        str: struct
    - token: LBrace
      span:
        range: 323..324
        str: "{"
    - token: Ident
      span:
        range: 327..328
        str: a
    - token: Colon
      span:
        range: 328..329
        str: ":"
    - token: Ident
      span:
        range: 330..331
        str: b
    - token: Comma
      span:
        range: 331..332
        str: ","
    - token: Ident
      span:
        range: 335..336
        str: b
    - token: Colon
      span:
        range: 336..337
        str: ":"
    - token: Ident
      span:
        range: 338..339
        str: a
    - token: Comma
      span:
        range: 339..340
        str: ","
    - token: RBrace
      span:
        range: 342..343
        str: "}"
    - token: RBrace
      span:
        range: 344..345
        str: "}"
    - token: Semi
      span:
        range: 345..346
        str: ;
    - token: LineComment
      span:
        range: 347..360
        str: "// or tuples:"
    - token: Ident
      span:
        range: 361..367
        str: _swap2
    - token: Walrus
      span:
        range: 368..370
        str: ":="
    - token: LParen
      span:
        range: 371..372
        str: (
    - token: Ident
      span:
        range: 372..373
        str: a
    - token: Colon
      span:
        range: 373..374
        str: ":"
    - token: Ident
      span:
        range: 375..378
        str: i32
    - token: Comma
      span:
        range: 378..379
        str: ","
    - token: Ident
      span:
        range: 380..381
        str: b
    - token: Colon
      span:
        range: 381..382
        str: ":"
    - token: Ident
      span:
        range: 383..386
        str: i32
    - token: RParen
      span:
        range: 386..387
        str: )
    - token: RArrow
      span:
        range: 388..390
        str: "->"
    - token: LParen
      span:
        range: 391..392
        str: (
    - token: Ident
      span:
        range: 392..395
        str: i32
    - token: Comma
      span:
        range: 395..396
        str: ","
    - token: Ident
      span:
        range: 397..400
        str: i32
    - token: RParen
      span:
        range: 400..401
        str: )
    - token: LBrace
      span:
        range: 402..403
        str: "{"
    - token: LParen
      span:
        range: 405..406
        str: (
    - token: Ident
      span:
        range: 406..407
        str: b
    - token: Comma
      span:
        range: 407..408
        str: ","
    - token: Ident
      span:
        range: 409..410
        str: a
    - token: RParen
      span:
        range: 410..411
        str: )
    - token: RBrace
      span:
        range: 412..413
        str: "}"
    - token: Semi
      span:
        range: 413..414
        str: ;
    - token: LineComment
      span:
        range: 416..429
        str: // references
    - token: Ident
      span:
        range: 430..436
        str: _swap3
    - token: Walrus
      span:
        range: 437..439
        str: ":="
    - token: LParen
      span:
        range: 440..441
        str: (
    - token: Ident
      span:
        range: 441..442
        str: a
    - token: Colon
      span:
        range: 442..443
        str: ":"
    - token: Ampersand
      span:
        range: 444..445
        str: "&"
    - token: Ident
      span:
        range: 445..448
        str: i32
    - token: Comma
      span:
        range: 448..449
        str: ","
    - token: Ident
      span:
        range: 450..451
        str: b
    - token: Colon
      span:
        range: 451..452
        str: ":"
    - token: Ampersand
      span:
        range: 453..454
        str: "&"
    - token: Ident
      span:
        range: 454..457
        str: i32
    - token: RParen
      span:
        range: 457..458
        str: )
    - token: LBrace
      span:
        range: 459..460
        str: "{"
    - token: Ident
      span:
        range: 462..463
        str: b
    - token: Comma
      span:
        range: 463..464
        str: ","
    - token: Ident
      span:
        range: 465..466
        str: a
    - token: Assign
      span:
        range: 467..468
        str: "="
    - token: Ident
      span:
        range: 469..470
        str: a
    - token: Comma
      span:
        range: 470..471
        str: ","
    - token: Ident
      span:
        range: 472..473
        str: b
    - token: Semi
      span:
        range: 473..474
        str: ;
    - token: RBrace
      span:
        range: 475..476
        str: "}"
    - token: Semi
      span:
        range: 476..477
        str: ;
    - token: Ident
      span:
        range: 479..485
        str: extern
    - token: Walrus
      span:
        range: 486..488
        str: ":="
    - token: LParen
      span:
        range: 489..490
        str: (
    - token: Ident
      span:
        range: 490..493
        str: i32
    - token: RParen
      span:
        range: 493..494
        str: )
    - token: RArrow
      span:
        range: 495..497
        str: "->"
    - token: Ident
      span:
        range: 498..501
        str: i32
    - token: At
      span:
        range: 502..503
        str: "@"
    - token: Ident
      span:
        range: 504..522
        str: __lang_test_extern
    - token: Semi
      span:
        range: 522..523
        str: ;
    - token: LineComment
      span:
        range: 525..567
        str: "// generics, instanced lazily on first use"
    - token: Ident
      span:
        range: 568..571
        str: sum
    - token: Walrus
      span:
        range: 572..574
        str: ":="
    - token: Lt
      span:
        range: 575..576
        str: "<"
    - token: Ident
      span:
        range: 576..577
        str: T
    - token: Gt
      span:
        range: 577..578
        str: ">"
    - token: LParen
      span:
        range: 579..580
        str: (
    - token: Ident
      span:
        range: 580..581
        str: a
    - token: Colon
      span:
        range: 581..582
        str: ":"
    - token: Ident
      span:
        range: 583..584
        str: T
    - token: Comma
      span:
        range: 584..585
        str: ","
    - token: Ident
      span:
        range: 586..587
        str: b
    - token: Colon
      span:
        range: 587..588
        str: ":"
    - token: Ident
      span:
        range: 589..590
        str: T
    - token: RParen
      span:
        range: 590..591
        str: )
    - token: RArrow
      span:
        range: 592..594
        str: "->"
    - token: Ident
      span:
        range: 595..596
        str: T
    - token: LBrace
      span:
        range: 597..598
        str: "{"
    - token: Ident
      span:
        range: 600..601
        str: a
    - token: Plus
      span:
        range: 602..603
        str: +
    - token: Ident
      span:
        range: 604..605
        str: b
    - token: RBrace
      span:
        range: 606..607
        str: "}"
    - token: Semi
      span:
        range: 607..608
        str: ;
    - token: LineComment
      span:
        range: 610..623
        str: // unit tests
    - token: Test
      span:
        range: 624..628
        str: test
    - token: LitStr
      span:
        range: 629..640
        str: "\"unit test\""
    - token: LBrace
      span:
        range: 641..642
        str: "{"
    - token: Ident
      span:
        range: 644..650
        str: assert
    - token: LParen
      span:
        range: 650..651
        str: (
    - token: Ident
      span:
        range: 651..655
        str: main
    - token: LParen
      span:
        range: 655..656
        str: (
    - token: RParen
      span:
        range: 656..657
        str: )
    - token: Eq
      span:
        range: 658..660
        str: "=="
    - token: LitInt
      span:
        range: 661..662
        str: "0"
    - token: RParen
      span:
        range: 662..663
        str: )
    - token: Semi
      span:
        range: 663..664
        str: ;
    - token: Ident
      span:
        range: 666..672
        str: assert
    - token: LParen
      span:
        range: 672..673
        str: (
    - token: Ident
      span:
        range: 673..678
        str: mul_2
    - token: LParen
      span:
        range: 678..679
        str: (
    - token: Ident
      span:
        range: 679..682
        str: val
    - token: RParen
      span:
        range: 682..683
        str: )
    - token: Eq
      span:
        range: 684..686
        str: "=="
    - token: LitInt
      span:
        range: 687..688
        str: "8"
    - token: RParen
      span:
        range: 688..689
        str: )
    - token: Semi
      span:
        range: 689..690
        str: ;
    - token: Ident
      span:
        range: 693..694
        str: a
    - token: Comma
      span:
        range: 694..695
        str: ","
    - token: Ident
      span:
        range: 696..697
        str: b
    - token: Walrus
      span:
        range: 698..700
        str: ":="
    - token: LitInt
      span:
        range: 701..702
        str: "4"
    - token: Comma
      span:
        range: 702..703
        str: ","
    - token: LitInt
      span:
        range: 704..705
        str: "5"
    - token: Semi
      span:
        range: 705..706
        str: ;
    - token: Ident
      span:
        range: 708..714
        str: _swap3
    - token: LParen
      span:
        range: 714..715
        str: (
    - token: Ampersand
      span:
        range: 715..716
        str: "&"
    - token: Ident
      span:
        range: 716..717
        str: a
    - token: Comma
      span:
        range: 717..718
        str: ","
    - token: Ampersand
      span:
        range: 719..720
        str: "&"
    - token: Ident
      span:
        range: 720..721
        str: b
    - token: RParen
      span:
        range: 721..722
        str: )
    - token: Semi
      span:
        range: 722..723
        str: ;
    - token: Ident
      span:
        range: 725..731
        str: assert
    - token: LParen
      span:
        range: 731..732
        str: (
    - token: LParen
      span:
        range: 732..733
        str: (
    - token: Ident
      span:
        range: 733..734
        str: a
    - token: Comma
      span:
        range: 734..735
        str: ","
    - token: Ident
      span:
        range: 736..737
        str: b
    - token: RParen
      span:
        range: 737..738
        str: )
    - token: Assign
      span:
        range: 739..740
        str: "="
    - token: LParen
      span:
        range: 741..742
        str: (
    - token: LitInt
      span:
        range: 742..743
        str: "5"
    - token: Comma
      span:
        range: 743..744
        str: ","
    - token: LitInt
      span:
        range: 745..746
        str: "4"
    - token: RParen
      span:
        range: 746..747
        str: )
    - token: RParen
      span:
        range: 747..748
        str: )
    - token: Semi
      span:
        range: 748..749
        str: ;
    - token: Ident
      span:
        range: 752..758
        str: extern
    - token: LParen
      span:
        range: 758..759
        str: (
    - token: LitInt
      span:
        range: 759..761
        str: "42"
    - token: RParen
      span:
        range: 761..762
        str: )
    - token: Semi
      span:
        range: 762..763
        str: ;
    - token: Ident
      span:
        range: 766..772
        str: assert
    - token: LParen
      span:
        range: 772..773
        str: (
    - token: Ident
      span:
        range: 773..776
        str: sum
    - token: LParen
      span:
        range: 776..777
        str: (
    - token: LitStr
      span:
        range: 777..784
        str: "\"tests\""
    - token: Comma
      span:
        range: 784..785
        str: ","
    - token: LitStr
      span:
        range: 786..795
        str: "\" worked\""
    - token: RParen
      span:
        range: 795..796
        str: )
    - token: Eq
      span:
        range: 797..799
        str: "=="
    - token: LitStr
      span:
        range: 800..814
        str: "\"tests worked\""
    - token: RParen
      span:
        range: 814..815
        str: )
    - token: Semi
      span:
        range: 815..816
        str: ;
    - token: RBrace
      span:
        range: 817..818
        str: "}"
    - token: Eoi
      span:
        range: 818..818
        str: ""

