crates/lexer/src/snapshots/lexer__tests__lex_str_lit-4.snap
---
source: crates/token/src/lib.rs
expression: "lex(\"\\\"a\")"
---
- "\"a"
- Err: unexpected end of input

